@@ -3,11 +3,12 @@ package study.cursach.services;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ArrayNode;
-import com.fasterxml.jackson.databind.node.ObjectNode;
 import org.springframework.stereotype.Service;
+import study.cursach.dto.*;
 import study.cursach.entity.*;
 import study.cursach.repo.*;
-import com.fasterxml.jackson.databind.ObjectMapper;
+
+import java.text.SimpleDateFormat;
 
 @Service
 public class FullInfoService {
@@ -16,25 +17,34 @@ public class FullInfoService {
     private final CriminalEntityRepository criminalEntityRepository;
     private final CustomsParamEntityRepository customsParamEntityRepository;
     private final InstructionEntityRepository instructionEntityRepository;
+    private final GetByIdService getByIdService;
 
     private final NextGeneratedEntityRepository nextGeneratedEntityRepository;
     private final JobEntityRepository jobEntityRepository;
+    private final SimpleDateFormat formatter = new SimpleDateFormat("yyyy-MM-dd");
+
     public FullInfoService(CriminalEntityRepository criminalEntityRepository,
                            CustomsParamEntityRepository customsParamEntityRepository,
                            InstructionEntityRepository instructionEntityRepository,
                            JobEntityRepository jobEntityRepository,
-                           NextGeneratedEntityRepository nextGeneratedEntityRepository){
+                           NextGeneratedEntityRepository nextGeneratedEntityRepository,
+                           GetByIdService getByIdService){
         this.criminalEntityRepository = criminalEntityRepository;
         this.customsParamEntityRepository = customsParamEntityRepository;
         this.instructionEntityRepository = instructionEntityRepository;
         this.jobEntityRepository = jobEntityRepository;
         this.nextGeneratedEntityRepository = nextGeneratedEntityRepository;
+        this.getByIdService = getByIdService;
     }
 
     public ArrayNode getJobs() {
         ArrayNode output = mapper.createArrayNode();
         for (JobEntity job : jobEntityRepository.findAll()) {
-            output.add(mapper.valueToTree(job));
+            JobDTO jobDTO = new JobDTO();
+            jobDTO.setCapacity(job.getCapacity());
+            jobDTO.setCompany(getByIdService.getCompanyName(job.getCompany_id(), 1));
+            jobDTO.setType(getByIdService.getJobTypeName(job.getType_id()));
+            output.add(mapper.valueToTree(jobDTO));
         }
         return output;
     }
@@ -42,7 +52,14 @@ public class FullInfoService {
     public ArrayNode getCriminal() {
         ArrayNode output = mapper.createArrayNode();
         for (CriminalEntity criminal : criminalEntityRepository.findAll()) {
-            output.add(mapper.valueToTree(criminal));
+            CriminalDTO criminalDTO = new CriminalDTO();
+            criminalDTO.setSurname(criminal.getSurname());
+            criminalDTO.setName(criminal.getName());
+            criminalDTO.setLastname(criminal.getLastname());
+            criminalDTO.setEye_color(criminal.getEye_color());
+            criminalDTO.setFingerprint(criminal.getFingerprint());
+            criminalDTO.setNationality(getByIdService.getCountryName(criminal.getNationality()));
+            output.add(mapper.valueToTree(criminalDTO));
         }
         return output;
     }
@@ -50,7 +67,12 @@ public class FullInfoService {
     public ArrayNode getCustomsParam() {
         ArrayNode output = mapper.createArrayNode();
         for (CustomsParamEntity customs : customsParamEntityRepository.findAll()) {
-            output.add(mapper.valueToTree(customs));
+            CustomsDTO custom = new CustomsDTO();
+            custom.setMax_size(customs.getMax_size());
+            custom.setMax_weight(customs.getMax_weight());
+            custom.setName(getByIdService.getCustomsInfo(customs.getCategory_id()).get(0));
+            output.add(mapper.valueToTree(custom));
+            System.out.println(output);
         }
         return output;
     }
@@ -58,14 +80,56 @@ public class FullInfoService {
     public ArrayNode getInstruction() {
         ArrayNode output = mapper.createArrayNode();
         for (InstructionEntity instruction : instructionEntityRepository.findAll()) {
-            output.add(mapper.valueToTree(instruction));
+            InstructionDTO instructionDTO = new InstructionDTO();
+            instructionDTO.setName(instruction.getName());
+            instructionDTO.setLastname(instruction.getLastname());
+            instructionDTO.setNationality(getByIdService.getCountryName(instruction.getNationality()));
+            instructionDTO.setEye_color(instruction.getEye_color());
+            instructionDTO.setDate_of_order(instruction.getDate_of_order());
+            instructionDTO.setSurname(instruction.getSurname());
+            instructionDTO.setPositive_negative_type(instruction.isPositive_negative_type());
+            instructionDTO.setJob_type(getByIdService.getJobTypeName(instruction.getJob_type_id()));
+            instructionDTO.setJob_company(getByIdService.getCompanyName(instruction.getJob_id(), 0));
+            output.add(mapper.valueToTree(instructionDTO));
         }
         return output;
     }
 
     public JsonNode getNext() {
-        JsonNode output = mapper.valueToTree(nextGeneratedEntityRepository.findAllByOrderById().getFirst());
-        return output;
+        var next = nextGeneratedEntityRepository.findAllByOrderById().get(0);
+        NextDTO nextDTO = new NextDTO();
+        nextDTO.setName(next.getName());
+        nextDTO.setSurname(next.getSurname());
+        nextDTO.setLastname(next.getLastname());
+        nextDTO.setNationality(next.getNationality());
+        nextDTO.setEyeColor(next.getEyeColor());
+        nextDTO.setFingerprint(next.getFingerprint());
+        nextDTO.setPsname(next.getPsname());
+        nextDTO.setPssurname(next.getPssurname());
+        nextDTO.setPslastname(next.getPslastname());
+        nextDTO.setPseyeColor(next.getPseyeColor());
+        nextDTO.setPsnationality(next.getPsnationality());
+        nextDTO.setEnname(next.getEnname());
+        nextDTO.setEnsurname(next.getEnsurname());
+        nextDTO.setEnlastname(next.getEnlastname());
+        nextDTO.setEndateGaned(formatter.format(next.getEndateGaned()));
+        nextDTO.setEndateExpired(formatter.format(next.getEndateExpired()));
+        nextDTO.setEnpurpose(getByIdService.getEntryPurpose(next.getEnpurpose()));
+        nextDTO.setWorkname(next.getWorkname());
+        nextDTO.setWorksurname(next.getWorksurname());
+        nextDTO.setWorklastname(next.getWorklastname());
+        nextDTO.setWorkcompany(getByIdService.getCompanyName(next.getWorkcompany(), 1));
+        nextDTO.setLugsize(next.getLugsize());
+        nextDTO.setLugweight(next.getLugweight());
+        nextDTO.setLugcategory(getByIdService.getCustomsInfo(next.getLugcategory()).get(0));
+        nextDTO.setDecname(next.getDecname());
+        nextDTO.setDecsurname(next.getDecsurname());
+        nextDTO.setDeclastname(next.getDeclastname());
+        nextDTO.setDecsize(next.getDecsize());
+        nextDTO.setDecweight(next.getDecweight());
+        nextDTO.setDeccat(getByIdService.getCustomsInfo(next.getDeccat()).get(0));
+
+        return mapper.valueToTree(nextDTO);
     }
 
 }
